#2115 - fixed overlapping layouts for file uploader

--- a/server/http-dashboard/app/components/ImageUploader/styles.less
+++ b/server/http-dashboard/app/components/ImageUploader/styles.less
@@ -62,8 +62,11 @@
   }
 }
 
-
 .image-uploader-file-icon {
   font-size: 32px;
   margin-bottom: 16px;
+}
+
+.file-uploader-text {
+  word-break: break-all;
 }
