--- a/server/http-dashboard/app/scenes/OTA/styles.less
+++ b/server/http-dashboard/app/scenes/OTA/styles.less
@@ -48,9 +48,10 @@
 }
 
 .upload-firmware {
-  width: 304px;
+  max-width: 304px;
   height: 99px;
   border-radius: 4px;
+  margin-right: 4px;
   background-color: @font-color-white;
 }
 
